--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-bientot plus d'info ici :)
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=//discord.gg/8buaTJkfbn" />
+  </head>
+  <body>
+    <p>Suivez <a href="//discord.gg/8buaTJkfbn/">ce lien</a>.</p>
+  </body>
+</html>
