--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="Refresh" content="0; url=//discord.gg/8buaTJkfbn" />
   </head>
   <body>
-    <p>Suivez <a href="//discord.gg/8buaTJkfbn/">ce lien</a>.</p>
+    <a href="//discord.gg/8buaTJkfbn/">Discord</a>
   </body>
 </html>
